<resources>
    <string name="app_name">Recipes</string>
    <string name="action_recipe">Recipe</string>
    <string name="action_report">Report</string>
    <string name="recipeTitle">Welcome Homer</string>
    <string name="recipeSubtitle">Please Give Generously</string>
    <string name="recipeButton">Recipe</string>
<!--    <string name="paypal">PayPal</string>-->
<!--    <string name="direct">Direct</string>-->
<!--    <string name="amount">Amount</string>-->
<!--    <string name="total">Total so Far</string>-->
<!--    <string name="totalSoFar">$ Total</string>-->
    <string name="reportTitle">Recipes Report</string>
<!--    <string name="defaultAmount">00</string>-->
<!--    <string name="defaultMethod">N/A</string>-->
<!--    <string name="enter_amount">Enter Amount</string>-->

    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Recipes (Lab K12)</string>
    <string name="nav_header_subtitle">voteforhomer@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_recipe">Recipe</string>
    <string name="menu_report">Report</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_about">About Us</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="aboutus_title">Homer for President !!</string>
    <string name="aboutus_message">Hi, I\'m Homer\n\nPlease vote for me.\n\n Please Please Please Please!!</string>

    <string name="messageLoading">Please wait while we Connect to the Server...</string>

    <string name="action_edit">Edit Recipes</string>
    <string name="action_update">Update</string>
    <string name="message_edit">Make Changes To Your Recipes Below!</string>

    <!-- START Firebase Resources-->

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>

    <string name="menu_report_all">All Recipes</string>
    <string name="select_profile_image">Select Profile Image</string>

    <string name="favourites_title">Favourite Recipes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="button_addRecipe">Add Recipe</string>
    <string name="hint_recipeTitle">Recipe Title</string>
    <string name="hint_recipeDescription">Description</string>
    <string name="menu_addRecipe">Add</string>
    <string name="menu_cancelRecipe">Cancel</string>
    <string name="enter_recipe_title">Please enter a Recipe Title</string>
    <string name="save_recipe">Save Recipe</string>
    <string name="button_addImage">Add Image</string>
    <string name="select_recipe_image">Select Recipe image</string>
    <string name="change_recipe_image">Change Recipe image</string>
    <string name="menu_deleteRecipe">Delete</string>

    <string name="welcomeTitle">Welcome!</string>
    <string name="aboutUs">This is Steven McKeown\'s Recipe app! Please add recipes to your content!</string>


    <string name="enter_recipe">Enter Recipe Details</string>




    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>



    <string name="id_fmt">User ID: %s</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <!--END Firebase Resources-->
</resources>
